# amdtop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY.md
.github/workflows/: publish.yml
docs/: NPU.md  PUBLISH.md  SCREENSHOT.md  THEMES.md
scripts/: __init__.py  aur_checks.sh  build-amdxdna-test-dkms.sh  generate_ghostty_screenshot.py  generate_screenshot.py  gpu_load.py  requirements-screenshot.txt  test-amdxdna-npu.sh  test_amdxdna_scripts.sh  test_aur_checks.sh  test_generate_ghostty_screenshot.py  test_generate_screenshot.py  test_gpu_load.py  update-aur.sh
scripts/amdxdna-test-dkms/: .gitignore  PKGBUILD  dkms.conf
src/: app.rs  config.rs  cpu.rs  gauge.rs  history.rs  main.rs  theme.rs  ui.rs
src/theme/: builtin.rs
src/ui/: cpu.rs  gpu.rs  npu.rs  processes.rs
tests/: cli.rs
themes/: HotPurpleTrafficLight.toml  adapta.toml  adwaita-dark.toml  adwaita.toml  ayu.toml  dracula.toml  dusklight.toml  elementarish.toml  everforest-dark-hard.toml  everforest-dark-medium.toml  everforest-light-medium.toml  flat-remix-light.toml  flat-remix.toml  flexoki-dark.toml  flexoki-light.toml  gotham.toml  greyscale.toml  gruvbox_dark.toml  gruvbox_dark_v2.toml  gruvbox_light.toml  gruvbox_material_dark.toml  horizon.toml  kanagawa-dragon.toml  kanagawa-lotus.toml  kanagawa-wave.toml  kyli0x.toml  matcha-dark-sea.toml  monokai.toml  night-owl.toml  nord.toml  onedark.toml  orange.toml  paper.toml  phoenix-night.toml  solarized_dark.toml  solarized_light.toml  tokyo-night.toml  tokyo-storm.toml  tomorrow-night.toml  twilight.toml  (+1 more)
