[package]
name = "amdtop"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A btop/nvitop-style system monitor for AMD GPUs, CPUs, and XDNA NPUs"
repository = "https://github.com/lhl/amdtop"
authors = ["LHL"]

[[bin]]
name = "amdtop"
path = "src/main.rs"

[dependencies]
libamdgpu_top = "0.11.5"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
