[package]
name = "amdtop"
version = "0.2.3"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A btop/nvitop-style system monitor for AMD GPUs, CPUs, and XDNA NPUs"
homepage = "https://github.com/lhl/amdtop"
repository = "https://github.com/lhl/amdtop"
readme = "README.md"
keywords = ["amd", "gpu", "monitoring", "tui", "linux"]
categories = ["command-line-utilities", "hardware-support"]
autobins = false
authors = ["LHL"]

[[bin]]
name = "amdtop"
path = "src/main.rs"

[dependencies]
# Backend updates are reviewed because telemetry and power-management behavior
# can change independently of the public API.
libamdgpu_top = "=0.11.5"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
